tests/invalid/NegationType_Invalid_1.whiley

function f(int|null x) -> int|bool:
    return x
